k8s/backenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ptd0409/max-weather-api:dev
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
