k8s/daemonset-fluentbit.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: DaemonSet
  metadata:
    annotations:
      deprecated.daemonset.template.generation: "14"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"DaemonSet","metadata":{"annotations":{},"labels":{"k8s-app":"fluent-bit","kubernetes.io/cluster-service":"true","version":"v1"},"name":"fluent-bit","namespace":"amazon-cloudwatch"},"spec":{"selector":{"matchLabels":{"k8s-app":"fluent-bit"}},"template":{"metadata":{"labels":{"k8s-app":"fluent-bit","kubernetes.io/cluster-service":"true","version":"v1"}},"spec":{"containers":[{"env":[{"name":"AWS_REGION","valueFrom":{"configMapKeyRef":{"key":"logs.region","na [...]
    creationTimestamp: "2025-04-25T13:31:25Z"
    generation: 14
    labels:
      k8s-app: fluent-bit
      kubernetes.io/cluster-service: "true"
      version: v1
    name: fluent-bit
    namespace: amazon-cloudwatch
    resourceVersion: "249484"
    uid: 24b237fb-3bd5-4e19-b0e5-3b9e397b25cf
  spec:
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        k8s-app: fluent-bit
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-04-25T16:41:05Z"
        creationTimestamp: null
        labels:
          k8s-app: fluent-bit
          kubernetes.io/cluster-service: "true"
          version: v1
      spec:
        containers:
        - env:
          - name: AWS_REGION
            valueFrom:
              configMapKeyRef:
                key: logs.region
                name: fluent-bit-cluster-info
          - name: CLUSTER_NAME
            valueFrom:
              configMapKeyRef:
                key: cluster.name
                name: fluent-bit-cluster-info
          - name: AWS_ROLE_ARN
            value: arn:aws:iam::376129850044:role/fluentbit-irsa
          - name: AWS_WEB_IDENTITY_TOKEN_FILE
            value: /var/run/secrets/eks.amazonaws.com/serviceaccount/token
          - name: HTTP_SERVER
            valueFrom:
              configMapKeyRef:
                key: http.server
                name: fluent-bit-cluster-info
          - name: HTTP_PORT
            valueFrom:
              configMapKeyRef:
                key: http.port
                name: fluent-bit-cluster-info
          - name: READ_FROM_HEAD
            valueFrom:
              configMapKeyRef:
                key: read.head
                name: fluent-bit-cluster-info
          - name: READ_FROM_TAIL
            valueFrom:
              configMapKeyRef:
                key: read.tail
                name: fluent-bit-cluster-info
          - name: HOST_NAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: spec.nodeName
          - name: HOSTNAME
            valueFrom:
              fieldRef:
                apiVersion: v1
                fieldPath: metadata.name
          - name: CI_VERSION
            value: k8s/1.3.33
          image: public.ecr.aws/aws-observability/aws-for-fluent-bit:2.32.4
          imagePullPolicy: Always
          name: fluent-bit
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 500m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/fluent-bit/state
            name: fluentbitstate
          - mountPath: /var/log
            name: varlog
            readOnly: true
          - mountPath: /var/lib/docker/containers
            name: varlibdockercontainers
            readOnly: true
          - mountPath: /fluent-bit/etc/
            name: fluent-bit-config
          - mountPath: /run/log/journal
            name: runlogjournal
            readOnly: true
          - mountPath: /var/log/dmesg
            name: dmesg
            readOnly: true
          - mountPath: /var/run/secrets/eks.amazonaws.com/serviceaccount
            name: aws-token
            readOnly: true
        dnsPolicy: ClusterFirstWithHostNet
        hostNetwork: true
        nodeSelector:
          kubernetes.io/os: linux
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: fluent-bit
        serviceAccountName: fluent-bit
        terminationGracePeriodSeconds: 10
        volumes:
        - hostPath:
            path: /var/fluent-bit/state
            type: ""
          name: fluentbitstate
        - hostPath:
            path: /var/log
            type: ""
          name: varlog
        - hostPath:
            path: /var/lib/docker/containers
            type: ""
          name: varlibdockercontainers
        - configMap:
            defaultMode: 420
            name: fluent-bit-config
          name: fluent-bit-config
        - hostPath:
            path: /run/log/journal
            type: ""
          name: runlogjournal
        - hostPath:
            path: /var/log/dmesg
            type: ""
          name: dmesg
        - name: aws-token
          projected:
            defaultMode: 420
            sources:
            - serviceAccountToken:
                audience: sts.amazonaws.com
                expirationSeconds: 86400
                path: token
    updateStrategy:
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
      type: RollingUpdate
  status:
    currentNumberScheduled: 0
    desiredNumberScheduled: 2
    numberMisscheduled: 0
    numberReady: 0
    numberUnavailable: 2
    observedGeneration: 14
kind: List
metadata:
  resourceVersion: ""
