k8s/backendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: amazon-cloudwatch
spec:
  type: LoadBalancer
  selector:
    app: backend  # This must match the labels of your FastAPI deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
