k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  selector:
    app: backend-api
  ports:
    - port: 80
      targetPort: 8000
